fixed the surveyDrawer to be less wide , fixed the NPS to not go out of bounds on mobile

--- a/src/components/Questions/NPS/NPS.module.css
+++ b/src/components/Questions/NPS/NPS.module.css
@@ -4,6 +4,7 @@
   table-layout: fixed;
   margin-bottom: 16px;
   justify-content: space-between;
+  overflow: auto;
 }
 
 .choice {
